front-end/09-front-end-dep.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end
  labels:
    app: front-end
    version: v1
  namespace: sock-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      name: front-end
      app: front-end
      version: v1
  template:
    metadata:
      labels:
        name: front-end
        app: front-end
        version: v1
    spec:
      containers:
      - name: front-end
        image: europe-west3-docker.pkg.dev/cnpe-blue/sockshop/front-end:latest
        resources:
          limits:
            cpu: 300m
            memory: 1000Mi
          requests:
            cpu: 100m
            memory: 300Mi
        ports:
        - containerPort: 8079
        securityContext:
          runAsNonRoot: true
          runAsUser: 10001
          capabilities:
            drop:
              - all
          readOnlyRootFilesystem: true
        livenessProbe:
          httpGet:
            path: /
            port: 8079
          initialDelaySeconds: 300
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /
            port: 8079
          initialDelaySeconds: 60
          periodSeconds: 3
      nodeSelector:
        beta.kubernetes.io/os: linux
