front-end/front-end-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end
  labels:
    name: front-end
    app: front-end
  namespace: sock-shop
spec:
  type: LoadBalancer
  ports:
    - name: front-end
      port: 80
      targetPort: 8079
  selector:
    name: front-end
    app: front-end
